<resources>
    <string name="app_name">Ledgers</string>

    <string name="textview">Account balance and title here</string>
    <string name="action_settings">Settings</string>
    <string name="button">Confirm</string>
    <string name="prompt">Price ($)</string>
    <string name="namehint">Description</string>
    <string name="resetPrompt">Reset Account</string>
    <string name="new_account">New Account</string>
    <string name="switch_account">Switch Accounts</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset_account">Reset Account</string>
    <string name="withdrawButton">Withdraw</string>
    <string name="depositButton">Deposit</string>
    <string name="taghint">Tags</string>
    <string name="dateHint">Date</string>
    <string name="export_account">Export Account</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Okay</string>
    <string name="calendarPrompt">Change Date</string>
    <string name="import_account">Import Account</string>
    <string name="import_actions">Import Actions</string>
</resources>
