<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/new_account" android:title="@string/new_account"
        android:orderInCategory="111" />
    <item android:id="@+id/reset_account" android:title="@string/reset_account"
        android:orderInCategory="112" />
    <item
        android:id="@+id/export_account"
        android:title="@string/export_account"
        android:orderInCategory="113" />
    <item
        android:id="@+id/import_actions"
        android:title="@string/import_actions"
        android:orderInCategory="114" />
    <!-- TODO add rename option -->
    <item
        android:id="@+id/delete_account"
        android:title="@string/delete_account"
        android:orderInCategory="115" />
</menu>
